Remove color from body to repair visibility errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
     /* bottom, image */
     url('../images/throne1.jpg');
     background-size: cover;
-    color: #fafafa;
     margin: 0 auto;
     font-size: 16px;
 }
